test/Programs/InvalidTests/invalidInChoice/inChoice.cfs

-- It doesn't really matter, it should not throw an error here
start :: Int
start = 23


fun :: &{L1: !Int} -> Int
fun c = select L1 c
